<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".StartFragment">

        <EditText
            android:id="@+id/plain_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/bttn_run_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/bttn_run"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bttn_run" />

        <Button
            android:id="@+id/bttn_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bttn_alarm" />

        <Button
            android:id="@+id/bttn_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bttn_map" />

        <Button
            android:id="@+id/bttn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bttn_google" />

        <Button
            android:id="@+id/bttn_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bttn_link" />

    </LinearLayout>
</layout>